kubernetes/apps/flux-system/flux-instance/app/receiver/cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhooks
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  ingress:
    - fromEntities:
        - cluster
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9292"
              protocol: TCP
